# rangelens

./: LENS_2026-06-03_01-58-10.csv  LENS_2026-06-03_21-52-25.csv  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/analytics/: ball_flight.py  coaching_rules.py  dispersion.py
app/device/: __init__.py  mock_reader.py  models.py  optishot_reader.py
app/domain/: models.py
app/services/: session_service.py
app/storage/: __init__.py  db.py  schema.sql
app/ui/: __init__.py  main_window.py
app/utils/: __init__.py
scripts/: build_windows.ps1  run_dev.ps1
tests/: test_optishot_reader.py  test_session_service.py
